@@ -277,4 +277,4 @@ else
 fi
 
 dnl
-AC_OUTPUT(gsl-config err/Makefile sys/Makefile utils/Makefile min/Makefile multimin/Makefile ieee-utils/Makefile fft/Makefile specfunc/Makefile dht/Makefile statistics/Makefile sum/Makefile roots/Makefile multiroots/Makefile poly/Makefile rng/Makefile randist/Makefile siman/Makefile integration/Makefile interpolation/Makefile doc/Makefile block/Makefile vector/Makefile matrix/Makefile histogram/Makefile monte/Makefile ode-initval/Makefile blas/Makefile linalg/Makefile eigen/Makefile Makefile)
+AC_OUTPUT(gsl-config err/Makefile sys/Makefile utils/Makefile permutation/Makefile min/Makefile multimin/Makefile ieee-utils/Makefile fft/Makefile specfunc/Makefile dht/Makefile statistics/Makefile sum/Makefile roots/Makefile multiroots/Makefile poly/Makefile rng/Makefile randist/Makefile siman/Makefile integration/Makefile interpolation/Makefile doc/Makefile block/Makefile vector/Makefile matrix/Makefile histogram/Makefile monte/Makefile ode-initval/Makefile blas/Makefile linalg/Makefile eigen/Makefile Makefile)
