@@ -1,3 +1,11 @@
+Tue Feb 15 17:46:19 2000  Brian Gough  <bjg@network-theory.co.uk>
+
+	* tridiag.h (solve_cyc_tridiag): fixed typo in header, was
+ 	solve_cyctridiag, missing _.
+
+	* converted all functions to use gsl_permutation instead of
+ 	gsl_vector_int
+
 Fri Oct  1 15:51:02 1999  Brian Gough  <bjg@network-theory.co.uk>
 
 	* temporary changes resulting from changes to block/vector/matrix
